# SafeKeep

./: .gitignore  CMakeLists.txt  Makefile  README.md  password-manager
include/: common.h
src/: auth.c  auth.h  crypto.c  crypto.h  gui.c  gui.h  main.c  storage.c  storage.h  utils.c  utils.h
ui/: main_window.ui  styles.css
